# pytaipit

./: CHANGELOG.md  README.md  pyproject.toml
docs/: taipit_api_mobile.ipynb  taipit_api_sharing.ipynb
examples/: example.py
pytaipit/: __init__.py  __main__.py  api.py  auth.py  cli.py  const.py  exceptions.py  helpers.py
tests/: __init__.py  common.py  conftest.py  test_api.py  test_auth.py
